--- a/UI_Functions/splash_screen.ui
+++ b/UI_Functions/splash_screen.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
-    <height>400</height>
+    <width>850</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -51,8 +51,8 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>230</y>
-         <width>731</width>
+         <y>270</y>
+         <width>831</width>
          <height>31</height>
         </rect>
        </property>
@@ -77,8 +77,8 @@ background-color:transparent;</string>
        <property name="geometry">
         <rect>
          <x>50</x>
-         <y>280</y>
-         <width>631</width>
+         <y>320</y>
+         <width>731</width>
          <height>23</height>
         </rect>
        </property>
@@ -110,10 +110,10 @@ QProgressBar::chunk{
       <widget class="QLabel" name="loading_lbl">
        <property name="geometry">
         <rect>
-         <x>0</x>
-         <y>320</y>
-         <width>731</width>
-         <height>21</height>
+         <x>10</x>
+         <y>350</y>
+         <width>811</width>
+         <height>61</height>
         </rect>
        </property>
        <property name="font">
@@ -127,10 +127,13 @@ QProgressBar::chunk{
 color: rgb(98, 114, 164);</string>
        </property>
        <property name="text">
-        <string>loading...</string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QFrame" name="logo_frame">
@@ -138,8 +141,8 @@ color: rgb(98, 114, 164);</string>
         <rect>
          <x>0</x>
          <y>-1</y>
-         <width>731</width>
-         <height>221</height>
+         <width>831</width>
+         <height>261</height>
         </rect>
        </property>
        <property name="styleSheet">
@@ -153,10 +156,10 @@ color: rgb(98, 114, 164);</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="leftMargin">
-         <number>232</number>
+         <number>262</number>
         </property>
         <property name="rightMargin">
-         <number>232</number>
+         <number>262</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
