--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -4693,7 +4693,8 @@ border:none;
 }
 QSlider::handle:horizontal {
     
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 255, 255, 255));
+	
+	background-color: rgb(0, 0, 0);
 	
     border: 0px solid;
     height: 20px;
