--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -4642,7 +4642,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
                       <property name="styleSheet">
                        <string notr="true">QPushButton{
 	background-color:transparent;
-	image:url(UI_Functions/Resources/Toggle_menu_btn_VPCO_rounded.svg);
+	
 	
 }
 
@@ -4653,6 +4653,16 @@ QPushButton:pressed{
                       </property>
                       <property name="text">
                        <string/>
+                      </property>
+                      <property name="icon">
+                       <iconset>
+                        <normaloff>UI_Functions/Resources/Toggle_menu_btn_VPCO_rounded.svg</normaloff>UI_Functions/Resources/Toggle_menu_btn_VPCO_rounded.svg</iconset>
+                      </property>
+                      <property name="iconSize">
+                       <size>
+                        <width>18</width>
+                        <height>16</height>
+                       </size>
                       </property>
                      </widget>
                     </item>
